fixed grid problem on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ main > * {
 article:first-of-type {
   background-color: red;
   /*  grid-area: 1 / 1 / span 2 / span 2;*/
-  grid-column: 1 / span 2;
+  grid-column: 1 / -1;
   padding: 1rem;
 }
 
